// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index - snapshot renders correctly when delete is not allowed 1`] = `
<div
  className="choiceConfiguration"
>
  <div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
        data-shrink={true}
      >
        Correct
      </label>
      <span
        aria-label="Correct"
        className="MuiButtonBase-root-41 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiRadio-root-26 MuiRadio-colorSecondary-30 RawInputRadio-radioRoot-1"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-40"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-44"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-34"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
        </span>
        <span
          className="MuiTouchRipple-root-62"
        />
      </span>
    </div>
    <div>
      <div
        className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-53"
      >
        <label
          className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
          data-shrink={true}
        >
          Label
        </label>
        <div
          className="Component-editorHolder-54"
        >
          <div>
            EditableHtml
          </div>
        </div>
      </div>
      <div
        className="Component-feedbackContainer-56"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-44 Component-arrowIcon-57"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M19 15l-6 6-1.42-1.42L15.17 16H4V4h2v10h9.17l-3.59-3.58L13 9l6 6z"
          />
        </svg>
        <div
          className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-53 Component-text-55"
        >
          <label
            className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
            data-shrink={true}
          >
            Feedback Text
          </label>
          <div
            className="Component-editorHolder-54"
          >
            <div>
              EditableHtml
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
        data-shrink={true}
      >
        Feedback
      </label>
      <div>
        <div
          onClick={[Function]}
        >
          <button
            aria-label="Custom Feedback"
            className="MuiButtonBase-root-41 MuiIconButton-root-35"
            disabled={false}
            onBlur={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-40"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-44 MuiSvgIcon-colorPrimary-45"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 12h-2v-2h2v2zm0-4h-2V6h2v4z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-62"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`index - snapshot renders correctly when feedback is not allowed 1`] = `
<div
  className="choiceConfiguration"
>
  <div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
        data-shrink={true}
      >
        Correct
      </label>
      <span
        aria-label="Correct"
        className="MuiButtonBase-root-41 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiRadio-root-26 MuiRadio-colorSecondary-30 RawInputRadio-radioRoot-1"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-40"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-44"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-34"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
        </span>
        <span
          className="MuiTouchRipple-root-62"
        />
      </span>
    </div>
    <div>
      <div
        className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-53"
      >
        <label
          className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
          data-shrink={true}
        >
          Label
        </label>
        <div
          className="Component-editorHolder-54"
        >
          <div>
            EditableHtml
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
        data-shrink={true}
      >
        Delete
      </label>
      <button
        aria-label="delete"
        className="MuiButtonBase-root-41 MuiIconButton-root-35"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-40"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-44"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-62"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`index - snapshot renders correctly with default props 1`] = `
<div
  className="choiceConfiguration"
>
  <div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
        data-shrink={true}
      >
        Correct
      </label>
      <span
        aria-label="Correct"
        className="MuiButtonBase-root-41 MuiIconButton-root-35 MuiPrivateSwitchBase-root-31 MuiRadio-root-26 MuiRadio-colorSecondary-30 RawInputRadio-radioRoot-1"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-40"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-44"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-34"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
        </span>
        <span
          className="MuiTouchRipple-root-62"
        />
      </span>
    </div>
    <div>
      <div
        className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-53"
      >
        <label
          className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
          data-shrink={true}
        >
          Label
        </label>
        <div
          className="Component-editorHolder-54"
        >
          <div>
            EditableHtml
          </div>
        </div>
      </div>
      <div
        className="Component-feedbackContainer-56"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-44 Component-arrowIcon-57"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M19 15l-6 6-1.42-1.42L15.17 16H4V4h2v10h9.17l-3.59-3.58L13 9l6 6z"
          />
        </svg>
        <div
          className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-53 Component-text-55"
        >
          <label
            className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
            data-shrink={true}
          >
            Feedback Text
          </label>
          <div
            className="Component-editorHolder-54"
          >
            <div>
              EditableHtml
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
        data-shrink={true}
      >
        Feedback
      </label>
      <div>
        <div
          onClick={[Function]}
        >
          <button
            aria-label="Custom Feedback"
            className="MuiButtonBase-root-41 MuiIconButton-root-35"
            disabled={false}
            onBlur={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-40"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-44 MuiSvgIcon-colorPrimary-45"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 12h-2v-2h2v2zm0-4h-2V6h2v4z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-62"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-19 MuiInputLabel-root-8 MuiInputLabel-formControl-13 MuiInputLabel-animated-16 MuiInputLabel-shrink-15 RawInputContainer-label-3"
        data-shrink={true}
      >
        Delete
      </label>
      <button
        aria-label="delete"
        className="MuiButtonBase-root-41 MuiIconButton-root-35"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-40"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-44"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-62"
        />
      </button>
    </div>
  </div>
</div>
`;
